# YouTubeDiscordBot

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: audioThread.cpp  audioThread.h  commands_listener.cpp  commands_listener.h  main.cpp  videoData.cpp  videoData.h
